[gd_scene load_steps=9 format=3 uid="uid://6771eq8g0v84"]

[ext_resource type="Script" path="res://Scenes/SwordGame/Move/game.gd" id="1_fsyiv"]
[ext_resource type="Script" path="res://Scenes/SwordGame/Move/sword.gd" id="1_gwcxj"]
[ext_resource type="Script" path="res://Scenes/SwordGame/Move/ui.gd" id="3_fuqa8"]
[ext_resource type="PackedScene" uid="uid://djk0sxhh28s4p" path="res://Character Models/excalibur.tscn" id="3_rhdlj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7n8wi"]
albedo_color = Color(0.374841, 0.217951, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ii4tj"]
height = 0.05
radius = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2dyjx"]
height = 0.35
radius = 0.05

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_n35qy"]
size = Vector2(27, 27)

[node name="Game" type="Node3D"]
script = ExtResource("1_fsyiv")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(15, 1, 15)
material = SubResource("StandardMaterial3D_7n8wi")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.415408, 0.909635, 0, -0.909635, 0.415408, 0, 1.5, 0.35)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.415281, 0.909693, 0, -0.909693, 0.415281, 0, 1, 1.92086)

[node name="Sword" type="Node3D" parent="."]
script = ExtResource("1_gwcxj")

[node name="StaticBody3D" type="StaticBody3D" parent="Sword"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Disc" type="CollisionShape3D" parent="Sword/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.146974, 0)
shape = SubResource("CylinderShape3D_ii4tj")

[node name="Handler" type="CollisionShape3D" parent="Sword/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00687587, 0)
shape = SubResource("CylinderShape3D_2dyjx")

[node name="excalibur" parent="Sword" instance=ExtResource("3_rhdlj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="UI" type="Control" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_fuqa8")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="SwordResistance" type="TextureProgressBar" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.001
value = 1.0
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_n35qy")

[node name="CandidateEnergy" type="TextureProgressBar" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.001
value = 1.0
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_n35qy")

[connection signal="game_ended" from="." to="Sword" method="_on_game_game_ended"]
[connection signal="game_started" from="." to="Sword" method="_on_game_game_started"]
[connection signal="update_energy_progress_bar" from="." to="UI" method="_on_game_update_energy_progress_bar"]
[connection signal="update_resistance_progress_bar" from="." to="UI" method="_on_game_update_resistance_progress_bar"]
[connection signal="sword_mouse_exit" from="Sword" to="." method="_on_sword_sword_mouse_exit"]
[connection signal="sword_mouse_over" from="Sword" to="." method="_on_sword_sword_mouse_over"]
[connection signal="mouse_entered" from="Sword/StaticBody3D" to="Sword" method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="Sword/StaticBody3D" to="Sword" method="_on_static_body_3d_mouse_exited"]
